# StreaMonitor

./: .dockerignore  .gitignore  Dockerfile  Downloader.py  README.md  docker-compose.yml  parameters.py  pyproject.toml  requirements.txt  streamonitor.db
streamonitor/: bot.py  config.py  http_session.py  manager.py
streamonitor/db/: __init__.py  models.py  operations.py  session.py
streamonitor/downloaders/: ffmpeg.py  fmp4s_wss.py  hls.py  hls_python.py
streamonitor/managers/: bulk_status_manager.py  outofspace_detector.py
streamonitor/managers/httpmanager/: api_v1.py  httpmanager.py
streamonitor/managers/httpmanager/serializers/: __init__.py  streamer_json.py
streamonitor/managers/httpmanager/skins/kseen715/templates/: settings.html.jinja
streamonitor/managers/httpmanager/skins/shaftoverflow/templates/: bulk_add.html.jinja  bulk_add_fragment.html.jinja  index.html.jinja  settings.html.jinja  streamer_nav_bar.html.jinja  streamer_record.html.jinja  (+4 more)
streamonitor/managers/httpmanager/static/streamonitor@shaftoverflow/: style.css
streamonitor/managers/httpmanager/static/streamonitor@truck-kun/: style.css
streamonitor/managers/httpmanager/utils/: __init__.py  confirm_deletes.py  filter_streamers.py  get_streamer_context.py  prev_status.py
streamonitor/sites/: amateurtv.py  bongacams.py  cam4.py  camscom.py  camsoda.py  chaturbate.py  cherrytv.py  dreamcam.py  dreamcam_vr.py  fansly_live.py  flirt4free.py  manyvids.py  myfreecams.py  sexchathu.py  streamate.py  stripchat.py  stripchat_vr.py  xlovecam.py
streamonitor/utils/: __init__.py  url_paths.py
(+10 files in other folders)
